# minigolf-server

./: README.md
protocol/: Cargo.toml
protocol/parsemacro/: Cargo.toml
protocol/parsemacro/src/: lib.rs
protocol/src/: client.rs  common.rs  crypt.rs  lib.rs  server.rs
proxy/: Cargo.toml
proxy/src/: main.rs
server/: Cargo.toml
server/src/: clients.rs  codec.rs  filter.rs  game.rs  handle_packets.rs  initial_handler.rs  listener.rs  main.rs  playerid.rs  server.rs  tickloop.rs
