[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
flume = "0.11.0"
futures-lite = "2.2.0"
log = "0.4.20"
slab = "0.4.9"
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1", features = ["derive"] }
casey = "0.4.0"
rand = "0.8.5"
bytes = "1.5.0"
protocol = {path="../protocol"}
